<resources>
    <string name="app_name">My Favorite Movie</string>
    <string name="add_item_headline">Add A New Movie</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="length">Length:</string>
    <string name="rating">Rating:</string>
    <string name="movie_length">Length:</string>
    <string name="pick_image">Pick Image</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirmation_dialog">Are you sure you want to delete all the movies?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_item">Add Item</string>
    <string name="trash_can_description">Delete All Items</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="length_hours">h</string>
    <string name="length_minutes">m</string>
    <string name="rate_star_description">Rate</string>
    <string name="select_image_preview">Select Image Preview</string>
    <string name="seperator">|</string>
    <string name="stars_example">★★★★★</string>
    <string name="movie_length_example">123m</string>
    <string name="movie_description_example">this is some content description about the movie that even spans among several lines</string>
    <string name="movie_description_detail_layout">Description</string>
    <string name="change_image">Change Image</string>
    <string name="change_item">Change</string>
    <string name="edit_movie">Edit Movie</string>
    <string name="invalid_input_message">Please Enter All Required Fields</string>
    <string name="star">★</string>
</resources>