<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.edititem.EditItemFragment"
    android:orientation="vertical"
    android:layout_marginHorizontal="7dp"
    android:background="@color/white">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/edit_movie"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:layout_weight="2"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:layout_weight="2">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_title"
            android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        style="@style/MaterialAlertDialog.Material3.Body.Text.CenterStacked"
        android:layout_weight="4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/movie_desc"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="top"
            android:text=""
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="20">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:paddingStart="4dp"
            android:text="@string/movie_length"
            android:textSize="18sp"
            android:layout_weight="4"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <NumberPicker
            android:id="@+id/movie_length_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/length_hours"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <NumberPicker
            android:id="@+id/movie_length_minutes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/length_minutes"
            android:textSize="20sp"
            android:layout_weight="1"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>

    <ImageView
        android:id="@+id/pick_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:cropToPadding="true"
        android:scaleType="fitXY"
        android:src="@drawable/movie_picture_place_holder"
        android:contentDescription="@string/select_image_preview"
        android:layout_weight="4"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:text="@string/change_image"
        android:textColor="@color/white"
        android:id="@+id/change_image_button"
        android:layout_weight="2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1.4">

        <ImageView
            android:id="@+id/first_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:contentDescription="@string/rate_star_description"/>

        <ImageView
            android:id="@+id/second_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:contentDescription="@string/rate_star_description"/>

        <ImageView
            android:id="@+id/third_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:contentDescription="@string/rate_star_description"/>

        <ImageView
            android:id="@+id/fourth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:contentDescription="@string/rate_star_description"/>

        <ImageView
            android:id="@+id/fifth_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_star"
            android:contentDescription="@string/rate_star_description"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/change_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/blue"
        android:tint="@color/white"
        android:text="@string/change_item"
        app:elevation="30dp"
        android:layout_weight="2"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"/>

</LinearLayout>